Add in lab class solutions for weeks 2/3/4

--- a/notebooks/MATH60082 - Cpp Support Class 1.ipynb
+++ b/notebooks/MATH60082 - Cpp Support Class 1.ipynb
@@ -2,10 +2,28 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "6c1bbc04",
+   "id": "3a3c47e0",
    "metadata": {},
    "source": [
     "# C++ Support Class 1\n",
+    "\n",
+    "## Using online c++ notebooks\n",
+    "\n",
+    "The notebooks provide me with an easy way to present multiple code snippets and output values. You should not use them to code up your solutions, although you could quickly change values in them to experiment. The notebook cells must be run in order from the top down, try pressing restarting the kernel and running all cells if it fails. I try to run each cell as if it were it's own cpp program, so that \n",
+    "~~~\n",
+    "int main()\n",
+    "{\n",
+    "   // code\n",
+    "}\n",
+    "~~~\n",
+    "looks like\n",
+    "~~~\n",
+    "{\n",
+    "   // code\n",
+    "}\n",
+    "~~~\n",
+    "in the cell. You should be able to copy/paste into a cpp file and run in your own IDE (say Visual Studio) as long as the correct include statements are at the top.\n",
+    "\n",
     "\n",
     "## Tasks\n",
     "\n",
@@ -26,7 +44,18 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "f4f8ab15",
+   "id": "e1463d1f",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#include <iostream>\n",
+    "using namespace std;"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "id": "ad576c5e",
    "metadata": {},
    "outputs": [
     {
@@ -41,9 +70,6 @@
     }
    ],
    "source": [
-    "#include <iostream>\n",
-    "using namespace std;\n",
-    "\n",
     "{\n",
     "    cout << \" This \";\n",
     "    cout << \"is a \";\n",
@@ -54,8 +80,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
-   "id": "a49632f3",
+   "execution_count": 3,
+   "id": "f3692f74",
    "metadata": {},
    "outputs": [
     {
@@ -74,7 +100,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "4ba7f182",
+   "id": "64d10ead",
    "metadata": {},
    "source": [
     "We can use `\\n` to start a new line. The difference between this and `endl` is that the latter adds a _flush_ command to send the buffer immediately to screen."
@@ -82,8 +108,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
-   "id": "cb4506c2",
+   "execution_count": 4,
+   "id": "b028a17b",
    "metadata": {},
    "outputs": [
     {
@@ -106,7 +132,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "8dac708f",
+   "id": "4b7c2491",
    "metadata": {},
    "source": [
     "The return carriage moves back to the start of a line, overwriting previously entered characters. "
@@ -114,8 +140,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
-   "id": "c34aadb5",
+   "execution_count": 5,
+   "id": "f95ab3b3",
    "metadata": {},
    "outputs": [
     {
@@ -138,7 +164,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "44241a47",
+   "id": "e864e451",
    "metadata": {},
    "source": [
     "Use a backspace `\\b` to move back one character."
@@ -146,8 +172,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
-   "id": "bbadf76f",
+   "execution_count": 6,
+   "id": "a4a11a10",
    "metadata": {},
    "outputs": [
     {
@@ -167,7 +193,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "8174571c",
+   "id": "de0b5a03",
    "metadata": {},
    "source": [
     "Use `\\\\` to output a backslash to screen."
@@ -175,8 +201,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
-   "id": "e2394e7f",
+   "execution_count": 7,
+   "id": "f5d5f61b",
    "metadata": {},
    "outputs": [
     {
@@ -195,7 +221,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "3728000c",
+   "id": "e8274b1e",
    "metadata": {},
    "source": [
     "As stated above, the `endl` command flushes the current buffer to screen and puts an end to the last line. So you will only see the difference if you do something inbetween writing the buffer and displaying on screen, which is a relatively rare occurence."
@@ -203,7 +229,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "a0a3a721",
+   "id": "a260a643",
    "metadata": {},
    "source": [
     "## Tasks \n",
@@ -231,8 +257,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
-   "id": "86475d15",
+   "execution_count": 8,
+   "id": "10dda35a",
    "metadata": {},
    "outputs": [
     {
@@ -259,8 +285,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
-   "id": "d5456796",
+   "execution_count": 9,
+   "id": "9bbe1095",
    "metadata": {},
    "outputs": [
     {
