--- a/notebooks/MATH60082 - Labs Week 2.ipynb
+++ b/notebooks/MATH60082 - Labs Week 2.ipynb
@@ -2,10 +2,36 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "01ab067e",
+   "id": "3f3704bb",
    "metadata": {},
    "source": [
-    "# Lab Class 1\n",
+    "# Lab Class Week 2\n",
+    "\n",
+    "## Using online c++ notebooks\n",
+    "\n",
+    "The notebooks provide me with an easy way to present multiple code snippets and output values. You should not use them to code up your solutions, although you could quickly change values in them to experiment. The notebook cells must be run in order from the top down, try pressing restarting the kernel and running all cells if it fails. I try to run each cell as if it were it's own cpp program, so that \n",
+    "~~~\n",
+    "int main()\n",
+    "{\n",
+    "   // code\n",
+    "}\n",
+    "~~~\n",
+    "looks like\n",
+    "~~~\n",
+    "{\n",
+    "   // code\n",
+    "}\n",
+    "~~~\n",
+    "in the cell. You should be able to copy/paste into a cpp file and run in your own IDE (say Visual Studio) as long as the correct include statements are at the top.\n",
+    "\n",
+    "To include functions, you can put a function in a cell and then use the function in subsequent cells, so\n",
+    "~~~\n",
+    "double myFunction( // arguments )\n",
+    "{\n",
+    "   // function code\n",
+    "}\n",
+    "~~~\n",
+    "goes into a cell on its own.\n",
     "\n",
     "## Code from Demo 1.1:"
    ]
@@ -13,7 +39,7 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "547afb21",
+   "id": "3a2be582",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -25,11 +51,10 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "dbc05379",
+   "id": "ed56fe7a",
    "metadata": {},
    "outputs": [],
    "source": [
-    "\n",
     "double normalDistribution_int(double x,int N)\n",
     "{\n",
     "  if(x<-10.)return 0.;\n",
@@ -61,7 +86,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "719d8617",
+   "id": "3b953881",
    "metadata": {},
    "source": [
     "## Tasks\n",
@@ -74,7 +99,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "e1488608",
+   "id": "38acea0b",
    "metadata": {},
    "source": [
     "Check out the value at a few points:"
@@ -83,7 +108,7 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "10327278",
+   "id": "10d52c02",
    "metadata": {},
    "outputs": [
     {
@@ -112,7 +137,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "f6a91e70",
+   "id": "049bfaa6",
    "metadata": {},
    "source": [
     "Now run the function with increasing values of $n$, notice that the value stops changing when the value of $n$ gets large, seeming that the solution has converged."
@@ -121,7 +146,7 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "7940a4be",
+   "id": "fb24ecea",
    "metadata": {},
    "outputs": [
     {
@@ -144,13 +169,15 @@
     }
    ],
    "source": [
-    "for(int n=2;n<=5000;n*=2)\n",
-    "    cout << n << \" \" << normalDistribution_int(1,n) << endl;"
+    "{\n",
+    "    for(int n=2;n<=5000;n*=2)\n",
+    "        cout << n << \" \" << normalDistribution_int(1,n) << endl;\n",
+    "}"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "73dd0a7d",
+   "id": "fe677bba",
    "metadata": {},
    "source": [
     "Now we implement the polynomial function approximation as given:"
@@ -159,7 +186,7 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "id": "67ce0c44",
+   "id": "eb3d16d2",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -178,7 +205,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "8155e2a5",
+   "id": "15c8a675",
    "metadata": {},
    "source": [
     "Notice that the solution is similar but there is clearly an error of the order $10^{-4}$ in places."
@@ -187,7 +214,7 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "id": "9c2360f4",
+   "id": "93023f68",
    "metadata": {},
    "outputs": [
     {
@@ -216,7 +243,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "9c1efd87",
+   "id": "e3a920ae",
    "metadata": {},
    "source": [
     "## Code from Demo 1.2"
@@ -225,7 +252,7 @@
   {
    "cell_type": "code",
    "execution_count": 7,
-   "id": "2cbc6e4e",
+   "id": "c7d410f4",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -236,7 +263,7 @@
   {
    "cell_type": "code",
    "execution_count": 8,
-   "id": "4689a20d",
+   "id": "80a25ae8",
    "metadata": {},
    "outputs": [
     {
@@ -244,7 +271,7 @@
      "output_type": "stream",
      "text": [
       "5.26988e+10\n",
-      " Total time elapsed for 1.1e+06 calculations is 0.0493652\n"
+      " Total time elapsed for 1.1e+06 calculations is 0.0486588\n"
      ]
     }
    ],
@@ -273,7 +300,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "5f9300fc",
+   "id": "7db3c69c",
    "metadata": {},
    "source": [
     "## Tasks\n",
@@ -287,7 +314,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "4113db16",
+   "id": "79026e1d",
    "metadata": {},
    "source": [
     "Now try the integral approximation `normalDistibution_int` with $n=128$ steps in the integration and run it $N=100000$ times. Choosing higher values than this may mean waiting a long time!"
@@ -296,7 +323,7 @@
   {
    "cell_type": "code",
    "execution_count": 9,
-   "id": "463ddda3",
+   "id": "05b28675",
    "metadata": {},
    "outputs": [
     {
@@ -304,7 +331,7 @@
      "output_type": "stream",
      "text": [
       "550000\n",
-      " Total time elapsed for 1.1e+06 calculations is 1.80702\n"
+      " Total time elapsed for 1.1e+06 calculations is 1.83636\n"
      ]
     }
    ],
@@ -333,7 +360,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "76d07a96",
+   "id": "bcd9375a",
    "metadata": {},
    "source": [
     "The results for the integration are more accurate, but take longer to calculate. So clearly we need to measure the trade off between accuracy and speed."
@@ -341,7 +368,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "2cdd6575",
+   "id": "092f053a",
    "metadata": {},
    "source": [
     "Now try the standard library function"
@@ -350,7 +377,7 @@
   {
    "cell_type": "code",
    "execution_count": 10,
-   "id": "f2956f6a",
+   "id": "55bc4d9d",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -362,7 +389,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "9c549386",
+   "id": "459e0ec4",
    "metadata": {},
    "source": [
     "Check we've done the transformation correctly"
@@ -371,7 +398,7 @@
   {
    "cell_type": "code",
    "execution_count": 11,
-   "id": "23c730dc",
+   "id": "96a58ff9",
    "metadata": {},
    "outputs": [
     {
@@ -401,7 +428,7 @@
   {
    "cell_type": "code",
    "execution_count": 12,
-   "id": "7604ce9c",
+   "id": "8f5f15ef",
    "metadata": {},
    "outputs": [
     {
@@ -409,7 +436,7 @@
      "output_type": "stream",
      "text": [
       "550000\n",
-      " Total time elapsed for 1.1e+06 calculations is 0.0486397\n"
+      " Total time elapsed for 1.1e+06 calculations is 0.0486575\n"
      ]
     }
    ],
@@ -438,7 +465,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "4e8883c5",
+   "id": "f981812a",
    "metadata": {},
    "source": [
     "Ok, so this is just as fast as the polynomial approximation but easier to write and accurate to machine precision -- we have a winner!"
