--- a/notebooks/MATH60082 - Labs Week 3.ipynb
+++ b/notebooks/MATH60082 - Labs Week 3.ipynb
@@ -2,10 +2,10 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "e9efc7ac",
+   "id": "395d9448",
    "metadata": {},
    "source": [
-    "# Lab Class 2\n",
+    "# Lab Class Week 3\n",
     "\n",
     "Here is an example of outputting to file and then plotting the results just to show you what it should look like. You should use whatever plotting package that you are familiar with. To include plotting functionality in the notebook we need to load some libraries using this special header file:"
    ]
@@ -13,16 +13,16 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "016e6fcb",
+   "id": "18f0c68d",
    "metadata": {},
    "outputs": [],
    "source": [
-    "#include \"math60082_lab_2_loader.hpp\""
+    "#include \"math60082_lab_plot_loader.hpp\""
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "5b39b725",
+   "id": "3329ba76",
    "metadata": {},
    "source": [
     "Here is the starter code from the demonstration. I am just writing the file into the current working directory."
@@ -31,7 +31,7 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "9dee969b",
+   "id": "83c11ab6",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -40,13 +40,13 @@
     "// use fstream for opening files for input/output\n",
     "#include <fstream>\n",
     "#include <sstream>\n",
-    "using namespace std;\n"
+    "using namespace std;"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "c1ff9e82",
+   "id": "ddc41feb",
    "metadata": {},
    "outputs": [
     {
@@ -89,16 +89,16 @@
   },
   {
    "cell_type": "markdown",
-   "id": "5ed462bc",
+   "id": "580b74f7",
    "metadata": {},
    "source": [
-    "Here is an example of plotting the file using gnuplot built into the notebook. Note that we require the x and y axes to be labelled. You will need to use your own plotting program to generate the results, such as excel, python, r or matlab."
+    "Here is an example of plotting the file using gnuplot built into the notebook. Note that we require the x and y axes to be labelled. You will need to use your own plotting program to generate the results, such as excel, python, r or matlab. I am not expecting anyone to understand what I am doing to get this to work!!!"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "0208c87f",
+   "id": "8454f93b",
    "metadata": {},
    "outputs": [
     {
@@ -127,7 +127,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "4b47386f",
+   "id": "0db8fc41",
    "metadata": {},
    "source": [
     "## Demo Code"
@@ -136,7 +136,7 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "id": "461cf93c",
+   "id": "32ef2054",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -160,7 +160,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "f3261793",
+   "id": "b7e592f1",
    "metadata": {},
    "source": [
     "## Tasks\n",
@@ -174,16 +174,28 @@
    ]
   },
   {
-   "cell_type": "markdown",
-   "id": "adb335fa",
+   "cell_type": "code",
+   "execution_count": 6,
+   "id": "a170e4fd",
    "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "2.7609\n"
+     ]
+    }
+   ],
    "source": [
-    "cout << eulersMethod(10,0,1.,0.) << endl;"
+    "{\n",
+    "    cout << eulersMethod(10,0,1.,0.) << endl;\n",
+    "}"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "d209a3ae",
+   "id": "f80ebcb8",
    "metadata": {},
    "source": [
     "Result agrees with the value from before."
@@ -191,8 +203,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
-   "id": "885e6288",
+   "execution_count": 7,
+   "id": "d4b915f2",
    "metadata": {},
    "outputs": [
     {
@@ -221,8 +233,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
-   "id": "8a1f2596",
+   "execution_count": 8,
+   "id": "3f84a416",
    "metadata": {},
    "outputs": [
     {
@@ -242,20 +254,22 @@
     }
    ],
    "source": [
-    "double valueOld=0.;\n",
-    "for(int k=0;k<=8;k++)\n",
     "{\n",
-    "    int n=10*pow(2,k);\n",
-    "    double value= eulersMethod(n,0,1.,0.);\n",
-    "    double diff = value - valueOld;\n",
-    "    cout << n << \" \" << value << \" \" << diff << endl;\n",
-    "    valueOld=value;\n",
+    "    double valueOld=0.;\n",
+    "    for(int k=0;k<=8;k++)\n",
+    "    {\n",
+    "        int n=10*pow(2,k);\n",
+    "        double value= eulersMethod(n,0,1.,0.);\n",
+    "        double diff = value - valueOld;\n",
+    "        cout << n << \" \" << value << \" \" << diff << endl;\n",
+    "        valueOld=value;\n",
+    "    }\n",
     "}"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "491a4df4",
+   "id": "725506e2",
    "metadata": {},
    "source": [
     "It looks as though the difference between successive results is tending to zero, which is what we would expect if the series is convergent. Also, when we double the number of points we notice that the difference between successive results is halved, indicating that our approximation\n",
@@ -266,7 +280,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "a3d6f724",
+   "id": "49d7c1ea",
    "metadata": {},
    "source": [
     "## Tasks:\n",
@@ -279,16 +293,16 @@
   },
   {
    "cell_type": "markdown",
-   "id": "44410044",
+   "id": "808dfe35",
    "metadata": {},
    "source": [
-    "One powerful way to reuse your code in C++ is to use template functions. Here we use the syntax `template <class F>` on the line above the function. Then as an argument, we write `const F &f` as the variable. This can now be any class that has the function `operator()(double  , double)` available, including the normal function declared in your code with the correct arguments. "
+    "One powerful way to reuse your code in C++ is to use template functions. Here we use the syntax `template <class F>` on the line above the function. Then as an argument, we write `const F &f` as the variable. This can now be any class that has the function `operator()(double  , double)` available, including a normal function declared in your code with the correct arguments. "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
-   "id": "50800492",
+   "execution_count": 9,
+   "id": "586fa07e",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -315,8 +329,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
-   "id": "24259a45",
+   "execution_count": 10,
+   "id": "887e66cc",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -328,8 +342,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
-   "id": "a5ea5f9d",
+   "execution_count": 11,
+   "id": "55eff3a2",
    "metadata": {},
    "outputs": [
     {
@@ -370,7 +384,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "dbb7f4e3",
+   "id": "b4975015",
    "metadata": {},
    "source": [
     "Clearly, as $c=2$ this method demonstrates second order convergence to the true solution. This means that our estimate \n",
@@ -382,7 +396,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "3f7a2aa2",
+   "id": "88b3082d",
    "metadata": {},
    "source": [
     "This may seem _obvious_, but there are many instances where the theoretical convergence rates cannot be acheived in real problems. This is caused by a breakdown in the underlying assumptions, such as when the function $f$ is not smooth, or in other words is discontinuous in some sense."
