Update with Week 5 solutions

--- a/notebooks/MATH60082 - Labs Week 5.ipynb
+++ b/notebooks/MATH60082 - Labs Week 5.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "7676fe19",
+   "id": "e3985218",
    "metadata": {},
    "source": [
     "# Lab Class Week 5\n",
@@ -15,7 +15,7 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "d62d806b",
+   "id": "f151f0d1",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -31,7 +31,7 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "40e0aea5",
+   "id": "5ad6e210",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -57,7 +57,7 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "8c0fa677",
+   "id": "68c52051",
    "metadata": {},
    "outputs": [
     {
@@ -76,7 +76,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "dc2cf596",
+   "id": "f8c8fe7e",
    "metadata": {},
    "source": [
     "## Tasks\n",
@@ -93,7 +93,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "8a07a865",
+   "id": "9e69e413",
    "metadata": {},
    "source": [
     "First run a few times"
@@ -102,7 +102,7 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "23e4e361",
+   "id": "aabe2fc2",
    "metadata": {},
    "outputs": [
     {
@@ -131,7 +131,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "dca4b911",
+   "id": "d9a9e5cc",
    "metadata": {},
    "source": [
     "All the values are the same?!?!?!? This is because the variable `rng` is created every time the function is run, resetting the random number generator back to the start. Fix this by making the variable `static` so that it only gets created once the first time a function is called."
@@ -140,7 +140,7 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "id": "baa5175c",
+   "id": "2e081463",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -165,7 +165,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "0f4f8a57",
+   "id": "df8cae13",
    "metadata": {},
    "source": [
     "I've had to rename the function to get it to work here, you don't have to do that."
@@ -174,7 +174,7 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "id": "0538928f",
+   "id": "3504adcd",
    "metadata": {},
    "outputs": [
     {
@@ -203,7 +203,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "7fc27588",
+   "id": "ffa2ec4c",
    "metadata": {},
    "source": [
     "Now write some values of this function for different values of $N$."
@@ -212,7 +212,7 @@
   {
    "cell_type": "code",
    "execution_count": 7,
-   "id": "8f8ed55e",
+   "id": "223bd5c3",
    "metadata": {},
    "outputs": [
     {
@@ -255,7 +255,7 @@
   {
    "cell_type": "code",
    "execution_count": 8,
-   "id": "92c5e709",
+   "id": "2523b81d",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -265,7 +265,7 @@
   {
    "cell_type": "code",
    "execution_count": 9,
-   "id": "6975f217",
+   "id": "da1b5ecf",
    "metadata": {},
    "outputs": [
     {
@@ -294,7 +294,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "699ac275",
+   "id": "0ce9ddf7",
    "metadata": {},
    "source": [
     "## Tasks\n",
@@ -307,7 +307,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "e1b72bfd",
+   "id": "5d2d0090",
    "metadata": {},
    "source": [
     "You can change the values of $N$ and $M$ in the box below:-"
@@ -316,7 +316,7 @@
   {
    "cell_type": "code",
    "execution_count": 10,
-   "id": "02a7a04d",
+   "id": "dca5c308",
    "metadata": {},
    "outputs": [
     {
@@ -324,47 +324,35 @@
      "output_type": "stream",
      "text": [
       " ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~\n",
-      " Run results with M=100 samples from V_N, where N=100.\n",
-      " mean = 1.29693\n",
-      " variance = 0.052386\n",
-      " variance of the sample mean = 0.00052386\n",
-      " 95% confident result is in [1.25116,1.34271] with 10000 total paths.\n"
+      " Run results with M=100 samples from V_N, where N=1000.\n",
+      " variance = 0.00542748\n",
+      " variance of the sample mean = 5.42748e-05\n",
+      " 95% confident result is in [1.28119,1.31065] with 100000 total paths.\n"
      ]
     }
    ],
    "source": [
     "{\n",
+    "    // run the code 100 times and take the average, like taking N*M paths\n",
     "    int M=100;\n",
     "\n",
-    "    // now store all the results\n",
-    "    vector<double> samples(M);\n",
     "    // number of paths in each calculation\n",
-    "    int N=100;\n",
+    "    int N=1000;\n",
     "\n",
     "    cout << \" ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~\"<<endl;\n",
     "    cout << \" Run results with M=\"<<M<<\" samples from V_N, where N=\"<<N<<\".\"<<endl;\n",
     "\n",
-    "    // run some calculations\n",
-    "    for(int i=0;i<M;i++)\n",
-    "    {\n",
-    "        samples[i] = monteCarloStatic(9.576,10.,0.05,0.4,0.75,N);\n",
-    "    }\n",
-    "    // estimate the mean from the sample\n",
+    "    // estimate the mean and variance from the sample\n",
     "    double sum=0.;\n",
+    "    double sumSq = 0.;\n",
     "    for(int i=0;i<M;i++)\n",
     "    {\n",
-    "        sum+=samples[i];\n",
+    "        double value = monteCarloStatic(9.576,10.,0.05,0.4,0.75,N);\n",
+    "        sum+=value;\n",
+    "        sumSq+=value*value;\n",
     "    }\n",
     "    double mean = sum/M;\n",
-    "    cout << \" mean = \" << mean << endl;\n",
-    "\n",
-    "    // estimate the variance from the sample\n",
-    "    double sumvar=0.;\n",
-    "    for(int i=0;i<M;i++)\n",
-    "    {\n",
-    "        sumvar+=(samples[i]-mean)*(samples[i]-mean);\n",
-    "    }\n",
-    "    double variance = sumvar/(M-1);\n",
+    "    double variance = sumSq/M - mean*mean;\n",
     "    cout << \" variance = \" << variance << endl; \n",
     "\n",
     "    // get the standard deviation of the sample mean\n",
@@ -377,7 +365,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "a64a38d9",
+   "id": "e898683a",
    "metadata": {},
    "source": [
     "Note that you could use $N=1$ or even just calculate the variance inside the algorithm, but it is more efficient to split out the calculation as outlined above."
