Full set of solutions for the lab classes now complete

--- a/notebooks/MATH60082 - Labs Week 9 - Part I.ipynb
+++ b/notebooks/MATH60082 - Labs Week 9 - Part I.ipynb
@@ -7,7 +7,7 @@
     "# SOR Method\n",
     "\n",
     "Click on the link for the interactive version:\n",
-    "[![Binder](https://mybinder.org/badge.svg)](https://mybinder.org/v2/gh/pjohno/MATH60082/master?filepath=MATH60082%20-%20Examples%20Sheet%207%20-%20SOR.ipynb)\n",
+    "[![Binder](https://mybinder.org/badge.svg)](https://mybinder.org/v2/gh/pjohno/MATH60082/master?filepath=MATH60082%20-%20Labs%20Week%209%20-%20Part%20I.ipynb)\n",
     "\n",
     "\n",
     "Consider the matrix equation\n",
@@ -322,7 +322,7 @@
     {
      "data": {
       "text/plain": [
-       "{ 1, 1.75, 2.25, 2.25 }"
+       "{ 1.0000000, 1.7500003, 2.2500001, 2.2500001 }"
       ]
      },
      "execution_count": 6,
@@ -457,7 +457,7 @@
     {
      "data": {
       "text/plain": [
-       "{ 1, 1.75, 2.25, 2.25 }"
+       "{ 1.0000000, 1.7499992, 2.2499987, 2.2499987 }"
       ]
      },
      "execution_count": 8,
@@ -497,7 +497,7 @@
     {
      "data": {
       "text/plain": [
-       "{ 1, 1.75, 2.25, 2.25 }"
+       "{ 1.0000000, 1.7499993, 2.2499990, 2.2499991 }"
       ]
      },
      "execution_count": 9,
@@ -575,7 +575,7 @@
   "kernelspec": {
    "display_name": "C++14",
    "language": "C++14",
-   "name": "xeus-cling-cpp14"
+   "name": "xcpp14"
   },
   "language_info": {
    "codemirror_mode": "text/x-c++src",
