--- a/notebooks/MATH60082 - Labs Week 9 - Part II.ipynb
+++ b/notebooks/MATH60082 - Labs Week 9 - Part II.ipynb
@@ -6,6 +6,9 @@
    "source": [
     "# The Crank-Nicolson Method\n",
     "\n",
+    "Click here for the interactive version of this notebook.\n",
+    "[![Binder](https://mybinder.org/badge.svg)](https://mybinder.org/v2/gh/pjohno/MATH60082/master?filepath=MATH60082%20-%20Labs%20Weel%209%20-%20Part%20II.ipynb)\n",
+    "\n",
     "For the Crank-Nicolson method we shall need:\n",
     "\n",
     "- All parameters for the option, such as $X$ and $S_0$ etc.\n",
@@ -409,7 +412,7 @@
   "kernelspec": {
    "display_name": "C++14",
    "language": "C++14",
-   "name": "xeus-cling-cpp14"
+   "name": "xcpp14"
   },
   "language_info": {
    "codemirror_mode": "text/x-c++src",
