--- a/notebooks/MATH60082 - Labs Week 10 - Part III.ipynb
+++ b/notebooks/MATH60082 - Labs Week 10 - Part III.ipynb
@@ -4,9 +4,12 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# The PSOR Method\n",
+    "# The Policy Iteration Method\n",
     "\n",
-    "Here we aim to solve the classic American put option problem using the PSOR method. \n",
+    "Click on the link for the interactive version:\n",
+    "[![Binder](https://mybinder.org/badge.svg)](https://mybinder.org/v2/gh/pjohno/MATH60082/master?filepath=MATH60082%20-%20Labs%20Week%2010%20-%20Part%20III.ipynb)\n",
+    "\n",
+    "Here we aim to solve the classic American put option problem using a policy iteration method. \n",
     "We must solve the problem\n",
     "$$\n",
     "\\frac{\\partial P}{\\partial t} + \\frac12\\sigma^2S^2\\frac{\\partial^2 P}{\\partial S^2} + rS\\frac{\\partial P}{\\partial S} - rP = 0\n",
@@ -20,31 +23,55 @@
     "$$\n",
     "and\n",
     "$$\n",
-    "S_0 = 1.973 \\text{ , } X=2  \\text{ , } T=1 \\text{ , } r=0.05 \\text{ , } \\sigma=0.4 ~.\n",
+    "S_0 = 9.735 \\text{ , } X=10  \\text{ , } T=1 \\text{ , } r=0.05 \\text{ , } \\sigma=0.4 ~.\n",
     "$$\n",
-    "The method of PSOR is almost identical to the SOR method, but there are two important differences.\n",
-    "1. Everytime we update the value we must take the maximum of the payoff and value.\n",
-    "2. The residual as defined previously will no longer work.\n",
     "\n",
+    "The policy iteration method works by assuming that either\n",
+    "$$\n",
+    "\\frac{\\partial P}{\\partial t} + \\frac12\\sigma^2S^2\\frac{\\partial^2 P}{\\partial S^2} + rS\\frac{\\partial P}{\\partial S} - rP = 0\n",
+    "$$\n",
+    "or\n",
+    "$$\n",
+    "P(S,t) = X-S,\n",
+    "$$\n",
+    "then uses some iteration to decide on which policy to choose at each point in space.\n",
     "\n",
-    "This means that we update the algorithm where $v_j^q$ is the $q$th guess at the solution, and $\\epsilon_j$ is our current measure of the residual error, to\n",
+    "The algorithm works as follows\n",
+    "1. Write down a standard finite difference scheme for the original PDE\n",
+    "2. For each $j$, take a guess at the solution to the PDE using \n",
     "$$\n",
-    "y = \\left(d_j - a_jv^{q+1}_{j-1} - c_jv^q_{j+1}\\right)/b_j\n",
+    "y = \\frac{ d_j - a_j v^{q}_{j-1} - c_j v^{q}_{j+1} }{b_j}\n",
+    "$$\n",
+    "3. If $y < X - S_j$ adjust the original finite difference approximation to\n",
+    "$$\n",
+    "\\hat a_j = 0\n",
     "$$\n",
     "$$\n",
-    "v^{q+1/2}_j=v^q_j+\\omega(y-v^q_j) ,\n",
+    "\\hat b_j = 1\n",
     "$$\n",
     "$$\n",
-    "v^{q+1}_j=\\max\\left(v^{q+1/2}_j, X - S_j\\right) .\n",
+    "\\hat c_j = 0\n",
     "$$\n",
     "$$\n",
-    "\\epsilon_j = \\left( v^{q+1}_j - v^q_j \\right)^2\n",
+    "\\hat d_j = X - S_j\n",
+    "$$ \n",
+    "4. If $y \\geq X - S_j$ set\n",
     "$$\n",
-    "Then the exit condition on the algorithm becomes stop if\n",
+    "\\hat a_j = a_j\n",
     "$$\n",
-    "\\sum_j \\epsilon_j < \\text{tol}^2\n",
     "$$\n",
-    "which should guarantee our solution is accurate to the level `tol`. The final solution is also on the web [click here](http://www.maths.manchester.ac.uk/~pjohnson/resources/math60082/MYCODES/solutions-sheet-7-3-1.cpp).\n",
+    "\\hat b_j = b_j\n",
+    "$$\n",
+    "$$\n",
+    "\\hat c_j = c_j\n",
+    "$$\n",
+    "$$\n",
+    "\\hat d_j = d_j\n",
+    "$$ \n",
+    "5. Solve new system with a Thomas algorithm to find $v_j^{q+1}$.\n",
+    "6. Check for convergence in $||v^q - v^{q+1}||$.\n",
+    "\n",
+    "A full implementation of this method is also available on the web [click here](https://github.com/pjohno/MATH60082/blob/master/main/math60082_example_sheet_8_policy.cpp).\n",
     "\n",
     "First include standard libraries:"
    ]
@@ -69,7 +96,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Next we have packaged the American put option solver up into a function. This code has been adapted from the European put option solver with SOR, so the inputs/outputs are the same. There is full flexibility on the choice of numerical parameters."
+    "and an implementation of the Thomas solver."
    ]
   },
   {
@@ -78,8 +105,47 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "/* \n",
+    " *    ON INPUT:\n",
+    " *    a, b and c -- are the diagonals of the matrix\n",
+    " *    rhs        -- is the right hand side\n",
+    " *    ON OUTPUT:\n",
+    " *    a, b, c             -- unchanged\n",
+    " *    rhs                 -- solution to Ax=b\n",
+    " */\n",
+    "void thomasSolve(const std::vector<double> &a,const std::vector<double> &b_,const std::vector<double> &c,std::vector<double> &rhs)\n",
+    "{\n",
+    "    int n=a.size();\n",
+    "    std::vector<double> b(n);\n",
+    "    // initial first value of b\n",
+    "    b[0]=b_[0];\n",
+    "    for(int j=1;j<n;j++)\n",
+    "    {\n",
+    "        b[j]=b_[j]-c[j-1]*a[j]/b[j-1];  \n",
+    "        rhs[j]=rhs[j]-rhs[j-1]*a[j]/b[j-1];\n",
+    "    }\n",
+    "    // calculate solution\n",
+    "    rhs[n-1]=rhs[n-1]/b[n-1];\n",
+    "    for(int j=n-2;j>=0;j--)\n",
+    "        rhs[j]=(rhs[j]-c[j]*rhs[j+1])/b[j];\n",
+    "}\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Next we have packaged the American put option solver up into a function. This code has been adapted from the European put option solver with SOR, so the inputs/outputs are the same except the over relaxation parameter has been swapped for the penalty. There is full flexibility on the choice of numerical parameters."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "/** \n",
-    "@brief Return the value of an American Put option using the Crank-Nicolson method with PSOR solver\n",
+    "@brief Return the value of an American Put option using the Crank-Nicolson method with Thomas solver\n",
     "ON INPUT:\n",
     "@param S0          -- initial stock price\n",
     "@param X           -- exercise (strike) price\n",
@@ -89,13 +155,13 @@
     "@param iMax        -- number of time steps\n",
     "@param jMax        -- number of space steps\n",
     "@param SMax        -- Maximum value of S\n",
-    "@param omega       -- is the relaxation parameter \n",
-    "@param tol         -- is the tolerance level\n",
+    "@param tol         -- is the tolerance level, should be || V || / 10^l where l is the required digits of accuracy \n",
     "@param iterMax     -- is maximum iterations\n",
     "ON OUTPUT:\n",
     "@return the value of a American put option at \\f$ S=S0 \\f$, \\f$ t=0 \\f$\n",
     "**/\n",
-    "double americanPut_CN(double S0,double X,double T,double r,double sigma,int iMax,int jMax,double SMax,double omega,double tol,int iterMax)\n",
+    "double americanPut_CN(double S0,double X,double T,double r,double sigma,\n",
+    "                      int iMax,int jMax,double SMax,double tol,int iterMax)\n",
     "{\n",
     "    double dS=SMax/jMax;\n",
     "    double dt=T/iMax;\n",
@@ -118,8 +184,8 @@
     "        // declare vectors for matrix equations\n",
     "        std::vector<double> a(jMax+1),b(jMax+1),c(jMax+1),d(jMax+1);\n",
     "        // set up matrix equations a[j]=\n",
-    "        a[0] = 0.;b[0] = 1.;c[0] = 0.;\n",
-    "        d[0] = X*exp(-r*(iMax-i)*dt);\n",
+    "        a[0] = 0.;b[0] = -1./dt - 0.5*r;c[0] = 0.;\n",
+    "        d[0] = (-1./dt + 0.5*r)*vOld[0];\n",
     "        for(int j=1;j<jMax;j++)\n",
     "        {\n",
     "            a[j] = 0.25*(sigma*sigma*j*j-r*j);\n",
@@ -129,39 +195,59 @@
     "        }\n",
     "        a[jMax] = 0.;b[jMax] = 1.;c[jMax] = 0.;\n",
     "        d[jMax] = 0.;\n",
-    "        // solve with SOR method\n",
-    "        int sor;\n",
-    "        for(sor=0;sor<iterMax;sor++)\n",
+    "        // solve with penalty method\n",
+    "        int iter;\n",
+    "        for(iter=0;iter<iterMax;iter++)\n",
     "        {\n",
-    "            double error=0.;\n",
-    "            // implement sor in here\n",
+    "            // create new vectors containing the FD approximations\n",
+    "            std::vector<double> aHat(a),bHat(b),cHat(c),dHat(d);\n",
+    "            // decide on policy here\n",
     "            {\n",
+    "                // get SOR value\n",
     "                double y = (d[0] - c[0]*vNew[1])/b[0];\n",
-    "                y = vNew[0] + omega*(y-vNew[0]); \n",
-    "                y = std::max(y,X-S[0]);\n",
-    "                error+=(y-vNew[0])*(y-vNew[0]);\n",
-    "                vNew[0] = y;\n",
+    "                // if SOR value suggests policy is to exercise, adjust matrix equations\n",
+    "                if( y < X - S[0] )\n",
+    "                {\n",
+    "                    aHat[0]=0.;bHat[0]=1.;cHat[0]=0.;dHat[0]=X - S[0];\n",
+    "                }\n",
     "            }\n",
     "            for(int j=1;j<jMax;j++)\n",
     "            {\n",
+    "                // get SOR value\n",
     "                double y = (d[j] - a[j]*vNew[j-1] - c[j]*vNew[j+1])/b[j];\n",
-    "                y = vNew[j] + omega*(y-vNew[j]); \n",
-    "                y = std::max(y,X-S[j]);\n",
-    "                error+=(y-vNew[j])*(y-vNew[j]);\n",
-    "                vNew[j] = y;\n",
+    "                // if SOR value suggests policy is to exercise, adjust matrix equations\n",
+    "                if( y < X - S[j] )\n",
+    "                {\n",
+    "                    aHat[j]=0.;bHat[j]=1.;cHat[j]=0.;dHat[j]=X - S[j];\n",
+    "                }\n",
     "            }\n",
     "            {\n",
     "                double y = (d[jMax] - a[jMax]*vNew[jMax-1])/b[jMax];\n",
-    "                y = vNew[jMax] + omega*(y-vNew[jMax]); \n",
-    "                y = std::max(y,X-S[jMax]);\n",
-    "                error+=(y-vNew[jMax])*(y-vNew[jMax]);\n",
-    "                vNew[jMax] = y;\n",
-    "            }    \n",
-    "            // make an exit condition when solution found\n",
+    "                // if SOR value suggests policy is to exercise, adjust matrix equations\n",
+    "                if( y < X - S[jMax] )\n",
+    "                {\n",
+    "                    aHat[jMax]=0.;bHat[jMax]=1.;cHat[jMax]=0.;dHat[jMax]=X - S[jMax];\n",
+    "                }\n",
+    "            }\n",
+    "            // now solve *Hat matrix problem with thomas\n",
+    "            thomasSolve(aHat,bHat,cHat,dHat);\n",
+    "            // dHat now contains next guess at solution v_j^{q+1}\n",
+    "            // check for differences between dHat and vNew\n",
+    "            double error=0.;\n",
+    "            for(int j=0;j<=jMax;j++)\n",
+    "            {\n",
+    "                error += (dHat[j]-vNew[j])*(dHat[j]-vNew[j]);\n",
+    "            }\n",
+    "            // update vNew\n",
+    "            vNew = dHat;\n",
+    "            // make an exit condition when solution is converged\n",
     "            if(error<tol*tol)\n",
+    "            {\n",
+    "                // cout << \" # solved after \"<< penaltyIt << \" iterations\\n\\n\" << endl;\n",
     "                break;\n",
+    "            }\n",
     "        }\n",
-    "        if(sor>=iterMax)\n",
+    "        if(iter>=iterMax)\n",
     "        {\n",
     "            std::cout << \" Error NOT converging within required iterations\\n\";\n",
     "            std::cout.flush();\n",
@@ -187,15 +273,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
-    "// declare and initialise Black Scholes parameters\n",
+    "// declare Black Scholes parameters\n",
     "double S0,X,T,r,sigma;\n",
-    "// declare and initialise grid paramaters \n",
+    "// declare grid paramaters \n",
     "int iMax,jMax;\n",
-    "// declare and initialise local variables (ds,dt)\n",
+    "// declare local variables (ds,dt)\n",
     "double SMax;"
    ]
   },
@@ -208,12 +294,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
     "// initialise Black Scholes parameters\n",
-    "S0=1.973;X=2.;T=1.;r=0.05;sigma=0.4;\n",
+    "S0=9.735;X=10.;T=1.;r=0.05;sigma=0.4;\n",
     "// initialise grid paramaters \n",
     "iMax=40;jMax=40;SMax=2*X;"
    ]
@@ -222,24 +308,24 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "before checking that our algorithm works and generates results."
+    "before we go on check that our algorithm works and generates results."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "0.28397"
+      "1.47464"
      ]
     }
    ],
    "source": [
-    "cout << americanPut_CN(S0,X,T,r,sigma,iMax,jMax,SMax,1,1.e-6,1000);"
+    "cout << americanPut_CN(S0,X,T,r,sigma,iMax,jMax,SMax,1.e-6,1000);"
    ]
   },
   {
@@ -251,7 +337,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -259,10 +345,10 @@
      "output_type": "stream",
      "text": [
       " n    | V_n \n",
-      "20 | 0.282737\n",
-      "40 | 0.283971\n",
-      "80 | 0.284129\n",
-      "160 | 0.284108\n"
+      "20 | 1.47217\n",
+      "40 | 1.47464\n",
+      "80 | 1.47409\n",
+      "160 | 1.47467\n"
      ]
     }
    ],
@@ -273,7 +359,7 @@
     "    int n=10*pow(2,k);\n",
     "    iMax = n;\n",
     "    jMax = n;\n",
-    "    double value = americanPut_CN(S0,X,T,r,sigma,iMax,jMax,SMax,1.2,1.e-6,1000);\n",
+    "    double value = americanPut_CN(S0,X,T,r,sigma,iMax,jMax,SMax,1.e-6,1000);\n",
     "    cout << n << \" | \" << value << \"\\n\";\n",
     "}"
    ]
@@ -284,50 +370,28 @@
    "source": [
     "Obviously we do not have an analytical value for this option but there are many places that you can find an estimate for the value. Even on my website I have an online American put pricer written in javascript that estimates the value as \n",
     "$$\n",
-    "V_\\text{exact}(S=1.973,t=0) = 0.284193\n",
+    "V_\\text{exact}(S=9.735,t=0) = 1.47501 .\n",
     "$$\n",
     "so we can see that these estimates are not very far from the true value. If we are only interested in 4s.f. then just $n=160$ provides a good estimate. If we want something more accurate we will need to be more careful, including the interpolation and tolerance as before. \n",
     "\n",
     "So for the next example (with extrapolation) we use $S_0=X$, so that interpolation errors are removed and also increase $S_\\text{max}$ and the tolerance. The new exact value we are aiming for is\n",
     "$$\n",
-    "V_\\text{exact}(S=X=2,t=0) = 0.273352 .\n",
+    "V_\\text{exact}(S=X=10,t=0) = 1.33676 .\n",
     "$$"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 8,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "\u001b[1minput_line_19:2:9: \u001b[0m\u001b[0;1;31merror: \u001b[0m\u001b[1mredefinition of 'valueOld'\u001b[0m\n",
-      " double valueOld=0;\n",
-      "\u001b[0;1;32m        ^\n",
-      "\u001b[0m\u001b[1minput_line_14:2:9: \u001b[0m\u001b[0;1;30mnote: \u001b[0mprevious definition is here\u001b[0m\n",
-      " double valueOld=0;\n",
-      "\u001b[0;1;32m        ^\n",
-      "\u001b[0m"
-     ]
-    },
-    {
-     "ename": "Interpreter Error",
-     "evalue": "",
-     "output_type": "error",
-     "traceback": [
-      "Interpreter Error: "
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "double valueOld=0;"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -335,11 +399,11 @@
      "output_type": "stream",
      "text": [
       " n    | V_n      | diff    | V_extrap  \n",
-      "20 | 0.255711 | 0.109497 | 0.29221\n",
-      "40 | 0.269349 | 0.0136377 | 0.273895\n",
-      "80 | 0.272299 | 0.00295035 | 0.273283\n",
-      "160 | 0.273077 | 0.000778094 | 0.273337\n",
-      "320 | 0.273281 | 0.000204178 | 0.273349\n"
+      "20 | 1.27856 | 1.27856 | 1.70474\n",
+      "40 | 1.34674 | 0.0681884 | 1.36947\n",
+      "80 | 1.3615 | 0.0147517 | 1.36641\n",
+      "160 | 1.36539 | 0.00389047 | 1.36668\n",
+      "320 | 1.36641 | 0.00102095 | 1.36675\n"
      ]
     }
    ],
@@ -351,7 +415,7 @@
     "    int n=10*pow(2,k);\n",
     "    iMax = n;\n",
     "    jMax = n;\n",
-    "    double value = americanPut_CN(S0,X,T,r,sigma,iMax,jMax,5*X,1.2,1.e-8,1000);\n",
+    "    double value = americanPut_CN(S0,X,T,r,sigma,iMax,jMax,5*X,1.e-8,1000);\n",
     "    double value_extrap = (4.*value - valueOld)/3.;\n",
     "    cout << n << \" | \" << value << \" | \" ;\n",
     "    cout << value - valueOld << \" | \";\n",
@@ -372,7 +436,7 @@
   "kernelspec": {
    "display_name": "C++14",
    "language": "C++14",
-   "name": "xeus-cling-cpp14"
+   "name": "xcpp14"
   },
   "language_info": {
    "codemirror_mode": "text/x-c++src",
