--- a/notebooks/MATH60082 - Labs Week 9 - Part III.ipynb
+++ b/notebooks/MATH60082 - Labs Week 9 - Part III.ipynb
@@ -7,7 +7,7 @@
     "# Analysing the Crank-Nicolson Method\n",
     "\n",
     "Click here for the interactive version of this notebook.\n",
-    "[![Binder](https://mybinder.org/badge.svg)](https://mybinder.org/v2/gh/pjohno/MATH60082/master?filepath=MATH60082%20-%20Examples%20Sheet%207%20-%20Crank%20Nicolson%20Analysis.ipynb)\n",
+    "[![Binder](https://mybinder.org/badge.svg)](https://mybinder.org/v2/gh/pjohno/MATH60082/master?filepath=MATH60082%20-%20Labs%20Weel%209%20-%20Part%20III.ipynb)\n",
     "\n",
     "Here we aim to study the convergence properties of a Crank-Nicolson method solving the European put option problem in finance. We know from the theory that the truncation errors of the method are $O\\big((\\Delta t)^2,(\\Delta S)^2)$, so what happens in reality? There are many sources of error in our algorithm, in particular\n",
     "- finite difference approximations, which are $O\\big( (\\Delta t)^2,(\\Delta S)^2 \\big)$\n",
@@ -515,7 +515,7 @@
   "kernelspec": {
    "display_name": "C++14",
    "language": "C++14",
-   "name": "xeus-cling-cpp14"
+   "name": "xcpp14"
   },
   "language_info": {
    "codemirror_mode": "text/x-c++src",
