Update links to correct path

--- a/notebooks/MATH60082 - Labs Week 10 - Part II.ipynb
+++ b/notebooks/MATH60082 - Labs Week 10 - Part II.ipynb
@@ -7,7 +7,7 @@
     "# The Penalty Method\n",
     "\n",
     "Click on the link for the interactive version:\n",
-    "[![Binder](https://mybinder.org/badge.svg)](https://mybinder.org/v2/gh/pjohno/MATH60082/master?filepath=MATH60082%20-%20Labs%20Week%2010%20-%20Part%20II.ipynb)\n",
+    "[![Binder](https://mybinder.org/badge.svg)](https://mybinder.org/v2/gh/pjohno/MATH60082/master?labpath=notebooks/MATH60082%20-%20Labs%20Week%2010%20-%20Part%20II.ipynb)\n",
     "\n",
     "Here we aim to solve the classic American put option problem using the so called penalty method. \n",
     "We must solve the problem\n",
