--- a/notebooks/MATH60082 - Labs Week 9 - Part II.ipynb
+++ b/notebooks/MATH60082 - Labs Week 9 - Part II.ipynb
@@ -7,7 +7,7 @@
     "# The Crank-Nicolson Method\n",
     "\n",
     "Click here for the interactive version of this notebook.\n",
-    "[![Binder](https://mybinder.org/badge.svg)](https://mybinder.org/v2/gh/pjohno/MATH60082/master?filepath=MATH60082%20-%20Labs%20Weel%209%20-%20Part%20II.ipynb)\n",
+    "[![Binder](https://mybinder.org/badge.svg)](https://mybinder.org/v2/gh/pjohno/MATH60082/master?labpath=notebooks/MATH60082%20-%20Labs%20Weel%209%20-%20Part%20II.ipynb)\n",
     "\n",
     "For the Crank-Nicolson method we shall need:\n",
     "\n",
