--- a/notebooks/MATH60082 - Labs Week 10 - Part I.ipynb
+++ b/notebooks/MATH60082 - Labs Week 10 - Part I.ipynb
@@ -7,7 +7,7 @@
     "# The PSOR Method\n",
     "\n",
     "Click on the link for the interactive version:\n",
-    "[![Binder](https://mybinder.org/badge.svg)](https://mybinder.org/v2/gh/pjohno/MATH60082/master?filepath=MATH60082%20-%20Labs%20Week%2010%20-%20Part%20I.ipynb)\n",
+    "[![Binder](https://mybinder.org/badge.svg)](https://mybinder.org/v2/gh/pjohno/MATH60082/master?labpath=notebooks/MATH60082%20-%20Labs%20Week%2010%20-%20Part%20I.ipynb)\n",
     "\n",
     "\n",
     "Here we aim to solve the classic American put option problem using the PSOR method. \n",
