Add notebooks for lectures 9 and 10

--- a/notebooks/MATH60082 - Lecture 9 - Least Squares Monte Carlo.ipynb
+++ b/notebooks/MATH60082 - Lecture 9 - Least Squares Monte Carlo.ipynb
@@ -4,7 +4,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Least Squares Monte Carlo: Longstaff and Schwartz (2001)\n",
+    "# Lecture 9\n",
+    "\n",
+    "## Least Squares Monte Carlo: Longstaff and Schwartz (2001)\n",
     "\n",
     " Monte Carlo methods is a popular choice to calculate the value for most types of options, but they struggle with early exercise. This is the subject of lots of research at the moment and we have seen the basic idea of some of the methods. What we present here is one of the easiest methods to understand and implement. There are still issues with how it performs in practise which we will also deal with here. The key issue is: _How to find what is the expected value for continuation?_ The continuation value is the discounted expected option value at the next instance in time.\n",
     "\n",
